Refactor module finder methodology